--- a/proprietary/odm/etc/init/vendor.oplus.hardware.biometrics.fingerprint@2.1-service.rc
+++ b/proprietary/odm/etc/init/vendor.oplus.hardware.biometrics.fingerprint@2.1-service.rc
@@ -68,6 +68,7 @@ on post-fs-data
     mkdir /data/vendor/fingerprint 0770 system system
     mkdir /mnt/vendor/persist/fingerprint 0770 system system
     chown system system /sys/kernel/oplus_display/hbm
+    chown system system /sys/kernel/oplus_display/power_status
 #-----------------------   for optical sensor end     ---------------------
 #add for silead_optical_fp
     mkdir /data/vendor/silead 0770 system system
